@@ -3,18 +3,19 @@ package polimi.ingsoft.server.model;
 import java.io.Serializable;
 import java.util.ArrayList;
 
-public class Deck<T extends Drawable> extends CardCollection<T> {
+public class Deck<T extends Drawable> extends CardCollection<T> implements  Serializable {
 
 
     public Deck(ArrayList<T> cards){
         this.cards=cards;
+        super.shuffle();
     }
     public Deck(){
     }
 
     public T draw(){
         if (!this.cards.isEmpty()) {
-            return this.cards.remove(0);
+            return this.cards.removeFirst();
         } else return null;
     }
 }
